# truss

./: .credo.exs  .env.example  .gitignore  Cargo.toml  README.md  atlas.hcl  cog.toml  docker-compose.yml  eslint.config.mjs  lefthook.yml  mise.toml  mix.exs  package.json  pnpm-lock.yaml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/server/: .gitignore  package.json
config/: config.exs  runtime.exs
crates/common/: Cargo.toml
crates/common/src/: domain.rs  lib.rs  scope.rs
crates/workspace/: Cargo.toml
dev/docs/: README.md  getting-started.md  structure.md
dev/docs/adr/: 0001-strategy-elixir-migration.md  0002-ex-crap-coverage.md  0003-zoi-postgrex-over-ecto.md
dev/env/: .env.example  README.md  docker-compose.yml
docs/adr/: 001-domain-architecture.md  002-snapshot-strategy.md  002-state-management.md  003-runtime-migration.md
docs/adr/archive/: 003-runtime-migration.md
lib/: postgrex_types.ex  truss.ex
lib/mix/tasks/: migrate.ex
lib/mix/tasks/db/: drop.ex  migrate.ex
lib/truss/: application.ex  schema.ex  workspace.ex
lib/truss/config/: database.ex
priv/: schema.sql
priv/migrations/: atlas.sum
src/: event.rs  main.rs  organization.rs  organization_test.rs  workspace.rs  workspace_test.rs
src/config/: environment.rs  mod.rs
src/validation/: mod.rs
test/: truss_test.exs
test/mix/tasks/db/: drop_test.exs  migrate_test.exs
test/support/: postgrex_mock.ex
test/truss/: schema_test.exs
test/truss/config/: database_test.exs
