[package]
name = "workspace"
version = "0.1.0"
edition = "2024"
description = "Workspace library for Truss"
license = "MIT"
repository = "https://github.com/john-eevee/truss"
readme = "README.md"
keywords = ["truss", "workspace"]
categories = ["development-tools"]

[dependencies]

[lints]
workspace = true
